first-version-updated

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <section id="countries"></section>
     </main>
     <footer id="footer">
-    
+        <h5> Erisvaldo - All rights reserved 2022 </h5>
     </footer>
     <script src="assets/js/index.js"></script>
 </body>
