Country page fixed and typescript code improved

--- a/frontend/country.html
+++ b/frontend/country.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Country - Info</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@300;600;800&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap"
+            rel="stylesheet" />
+        <link rel="stylesheet" href="./src/style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Country - Info </title>
-    <link rel="stylesheet" href="../assets/css/style.css">
-</head>
-
-<body>
-    <header id="menu">
-        <nav>
-            <ul>
-                <li><a href="../index.html"> Book of Countries </a></li>
-                <li><a href=""> </a></li>
-               
-            </ul>
-        </nav>
-    </header>
-    <section id="country-info">
-        <div id="container">
-            <div id="banner">
-                <img alt="flag-country" id="country-image">
+    <body>
+        <header id="menu">
+            <nav>
+                <ul>
+                    <li><a href="../index.html"> Book of Countries </a></li>
+                    <li><a href=""> </a></li>
+                </ul>
+            </nav>
+        </header>
+        <section id="country-info">
+            <div id="container">
+                <div id="banner">
+                    <img alt="flag-country" id="country-image" />
+                </div>
+                <div id="information">
+                    <h2></h2>
+                    <small> </small>
+                    <p></p>
+                </div>
             </div>
-            <div id="information">
-                <h2> </h2>
-                <small> </small>
-                <p> </p>
-            </div>  
-        </div>
-    </section>
-    <script src="../assets/js/country.js"></script>
-</body>
-
+        </section>
+        <script type="module" src="./src/country.ts"></script>
+    </body>
 </html>
