--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + TS</title>
+        <title>Book of Countries</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@300;600;800&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap"
             rel="stylesheet" />
+        <link rel="stylesheet" href="./src/style.css" />
     </head>
     <body>
         <header id="menu">
